cmake_minimum_required(VERSION 3.21)
project(chapter_2)

set(CMAKE_CXX_STANDARD 23)

add_executable(chapter_2 main.cpp)
add_executable(myfirst 2.1/myfirst.cpp)
add_executable(carrot 2.2/carrot.cpp)
add_executable(getinfo 2.3/getinfo.cpp)
add_executable(sqrt 2.4/sqrt.cpp)
add_executable(outfunc 2.4/outfunc.cpp)
add_executable(convert 2.4/convert.cpp)