cmake_minimum_required(VERSION 3.21)
project(chapter_3)

set(CMAKE_CXX_STANDARD 23)

add_executable(chapter_3 main.cpp)
add_executable(limits 3.1/limits.cpp)
add_executable(exceed 3.1/exceed.cpp)
add_executable(hexoct 3.1/haxoct.cpp)
add_executable(hexoct2 3.1/haxoct2.cpp)
add_executable(chartype 3.1/chartype.cpp)
add_executable(morechar 3.1/morechar.cpp)
add_executable(bondini 3.1/bondini.cpp)