cmake_minimum_required(VERSION 3.21)
project(chapter_4)

set(CMAKE_CXX_STANDARD 23)

add_executable(chapter_4 main.cpp)
add_executable(arrayone 4.1/arrayone.cpp)
add_executable(string 4.2/string.cpp)
add_executable(instr1 4.2/instr1.cpp)
add_executable(instr2 4.2/instr2.cpp)
add_executable(instr3 4.2/instr3.cpp)
add_executable(numstr 4.2/numstr.cpp)
add_executable(strtype 4.3/strtype.cpp)
add_executable(strtype2 4.3/strtype2.cpp)
add_executable(strtype3 4.3/strtype3.cpp)
add_executable(strtype4 4.3/strtype4.cpp)
add_executable(structur 4.4/structur.cpp)
add_executable(assgn_st 4.4/assgn_st.cpp)
add_executable(arrstruc 4.4/arrstruc.cpp)
add_executable(address 4.7/address.cpp)
add_executable(pointer 4.7/pointer.cpp)
add_executable(int_ptr 4.7/int_ptr.cpp)
add_executable(use_new 4.7/use_new.cpp)
add_executable(arraynew 4.7/arraynew.cpp)
add_executable(addpntrs 4.8/addpntrs.cpp)
add_executable(ptrstr 4.8/ptrstr.cpp)
add_executable(newstrct 4.8/newstrct.cpp)
add_executable(delete 4.8/delete.cpp)
add_executable(mixtypes 4.9/mixtypes.cpp)
add_executable(choices 4.10/choices.cpp)