cmake_minimum_required(VERSION 3.21)
project(chapter_5)

set(CMAKE_CXX_STANDARD 23)

add_executable(chapter_5 main.cpp)
add_executable(forloop 5.1/forloop.cpp)
add_executable(num_test 5.1/num_test.cpp)
add_executable(express 5.1/express.cpp)
add_executable(formore 5.1/formore.cpp)
add_executable(bigstep 5.1/bigstep.cpp)