cmake_minimum_required(VERSION 3.21)
project(chapter_5)

set(CMAKE_CXX_STANDARD 23)

add_executable(chapter_5 main.cpp)
add_executable(forloop 5.1/forloop.cpp)
add_executable(num_test 5.1/num_test.cpp)
add_executable(express 5.1/express.cpp)
add_executable(formore 5.1/formore.cpp)
add_executable(bigstep 5.1/bigstep.cpp)
add_executable(forstr1 5.1/forstr1.cpp)
add_executable(plus_one 5.1/plus_one.cpp)
add_executable(block 5.1/block.cpp)
add_executable(forstr2 5.1/forstr2.cpp)
add_executable(equal 5.1/equal.cpp)
add_executable(compstr1 5.1/compstr1.cpp)
add_executable(compstr2 5.1/compstr2.cpp)
add_executable(while 5.2/while.cpp)
add_executable(waiting 5.2/waiting.cpp)
add_executable(dowhile 5.3/dowhile.cpp)
add_executable(textin1 5.5/textin1.cpp)
add_executable(textin2 5.5/textin2.cpp)
add_executable(textin3 5.5/textin3.cpp)
add_executable(textin4 5.5/textin4.cpp)
add_executable(nested 5.6/nested.cpp)